--- a/deploy-run-quickstart/cloudbuild.yaml
+++ b/deploy-run-quickstart/cloudbuild.yaml
@@ -19,3 +19,5 @@ steps:
     [
       "deploy", "releases", "create", "rel1-${COMMIT_SHA}", "--project", "onkar-17-cloud", "--region", "us-central1", "--delivery-pipeline", "demo-cloud-deploy-run-pipeline", "--annotations", "commitId=${REVISION_ID}", "--images", "myapp=us.gcr.io/onkar-17-cloud/demo-cloud-deploy-run:latest"
     ]
+options:
+  logging: CLOUD_LOGGING_ONLY
