--- a/deploy-run-quickstart/cloudbuild.yaml
+++ b/deploy-run-quickstart/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '.', '-t', 'us.gcr.io/onkar-17-cloud/demo-cloud-deploy-run:latest']
+  args: ['build', '.', '-t', 'us.gcr.io/onkar-17-cloud/demo-cloud-deploy-run:latest', '-f', 'deploy-run-quickstart/Dockerfile']
 
 
 - name: 'gcr.io/cloud-builders/docker'
