--- a/deploy-run-quickstart/clouddeploy.yaml
+++ b/deploy-run-quickstart/clouddeploy.yaml
@@ -1,7 +1,7 @@
 apiVersion: deploy.cloud.google.com/v1
 kind: DeliveryPipeline
 metadata:
-  name: my-run-demo-app-1
+  name: demo-cloud-deploy-run-pipeline
 description: main application pipeline
 serialPipeline:
   stages:
