cloud deploy code

--- a/deploy-run-quickstart/cloudbuild.yaml
+++ b/deploy-run-quickstart/cloudbuild.yaml
@@ -17,7 +17,7 @@ steps:
   entrypoint: gcloud
   args:
     [
-      "deploy", "releases", "create", "rel1-${COMMIT_SHA}", "--project", "onkar-17-cloud", "--region", "us-central1", "--delivery-pipeline", "demo-cloud-deploy-run-pipeline", "--annotations", "commitId=${REVISION_ID}", "--images", "myapp=us.gcr.io/onkar-17-cloud/demo-cloud-deploy-run:latest"
+      "deploy", "releases", "create", "rel1-${COMMIT_SHA}", "--project", "onkar-17-cloud", "--region", "us-central1", "--delivery-pipeline", "demo-cloud-deploy-run-pipeline", "--annotations", "commitId=${REVISION_ID}", "--images", "myapp=us.gcr.io/onkar-17-cloud/demo-cloud-deploy-run:latest", "--skaffold-file", "deploy-run-quickstart/skaffold.yaml"
     ]
 options:
   logging: CLOUD_LOGGING_ONLY
