--- a/deploy-run-quickstart/clouddeploy.yaml
+++ b/deploy-run-quickstart/clouddeploy.yaml
@@ -18,6 +18,12 @@ metadata:
 description: Cloud Run development service
 run:
   location: projects/onkar-17-cloud/locations/us-central1
+executionConfigs:
+- defaultPool:
+    serviceAccount: cr-cd-sa@onkar-17-cloud.iam.gserviceaccount.com
+  usages:
+  - RENDER 
+  - DEPLOY
 ---
 
 apiVersion: deploy.cloud.google.com/v1
@@ -27,3 +33,9 @@ metadata:
 description: Cloud Run production service
 run:
   location: projects/onkar-17-cloud/locations/us-central1
+executionConfigs:
+- defaultPool:
+    serviceAccount: cr-cd-sa@onkar-17-cloud.iam.gserviceaccount.com
+  usages:
+  - RENDER 
+  - DEPLOY
