--- a/deploy-run-quickstart/clouddeploy.yaml
+++ b/deploy-run-quickstart/clouddeploy.yaml
@@ -15,7 +15,7 @@ apiVersion: deploy.cloud.google.com/v1
 kind: Target
 metadata:
   name: run-qsdev
-description: Cloud Run development service
+description: Cloud Run Development service
 run:
   location: projects/onkar-17-cloud/locations/us-central1
 deployParameters:
@@ -32,7 +32,7 @@ apiVersion: deploy.cloud.google.com/v1
 kind: Target
 metadata:
   name: run-qsprod
-description: Cloud Run production service
+description: Cloud Run Production service
 requireApproval: true
 run:
   location: projects/cysiv-dev-onkarn/locations/us-central1
