--- a/deploy-run-quickstart/clouddeploy.yaml
+++ b/deploy-run-quickstart/clouddeploy.yaml
@@ -7,8 +7,8 @@ serialPipeline:
   stages:
   - targetId: run-qsdev
     profiles: []
-  - targetId: run-qsprod
-    profiles: []
+  # - targetId: run-qsprod
+  #   profiles: []
 ---
 
 apiVersion: deploy.cloud.google.com/v1
@@ -26,21 +26,21 @@ executionConfigs:
   usages:
   - RENDER 
   - DEPLOY
----
+# ---
 
-apiVersion: deploy.cloud.google.com/v1
-kind: Target
-metadata:
-  name: run-qsprod
-description: Cloud Run Production service
-requireApproval: true
-run:
-  location: projects/cysiv-dev-onkarn/locations/us-central1
-deployParameters:
-  service_name: "cloud-run-deploy-prod"
-executionConfigs:
-- defaultPool:
-    serviceAccount: cr-cd-sa@onkar-17-cloud.iam.gserviceaccount.com
-  usages:
-  - RENDER 
-  - DEPLOY
+# apiVersion: deploy.cloud.google.com/v1
+# kind: Target
+# metadata:
+#   name: run-qsprod
+# description: Cloud Run Production service
+# requireApproval: true
+# run:
+#   location: projects/cysiv-dev-onkarn/locations/us-central1
+# deployParameters:
+#   service_name: "cloud-run-deploy-prod"
+# executionConfigs:
+# - defaultPool:
+#     serviceAccount: cr-cd-sa@onkar-17-cloud.iam.gserviceaccount.com
+#   usages:
+#   - RENDER 
+#   - DEPLOY
