--- a/deploy-run-quickstart/clouddeploy.yaml
+++ b/deploy-run-quickstart/clouddeploy.yaml
@@ -19,28 +19,28 @@ description: Cloud Run Development service
 run:
   location: projects/onkar-17-cloud/locations/us-central1
 deployParameters:
-  service_name: "cloud-run-deploy-dev"
+  service_name: "cloud-run-deploy-dev-test"
 executionConfigs:
 - defaultPool:
     serviceAccount: cr-cd-sa@onkar-17-cloud.iam.gserviceaccount.com
   usages:
   - RENDER 
   - DEPLOY
-# ---
+---
 
-# apiVersion: deploy.cloud.google.com/v1
-# kind: Target
-# metadata:
-#   name: run-qsprod
-# description: Cloud Run Production service
-# requireApproval: true
-# run:
-#   location: projects/cysiv-dev-onkarn/locations/us-central1
-# deployParameters:
-#   service_name: "cloud-run-deploy-prod"
-# executionConfigs:
-# - defaultPool:
-#     serviceAccount: cr-cd-sa@onkar-17-cloud.iam.gserviceaccount.com
-#   usages:
-#   - RENDER 
-#   - DEPLOY
+apiVersion: deploy.cloud.google.com/v1
+kind: Target
+metadata:
+  name: run-qsprod
+description: Cloud Run Production service
+requireApproval: true
+run:
+  location: projects/cysiv-dev-onkarn/locations/us-central1
+deployParameters:
+  service_name: "cloud-run-deploy-prod-test"
+executionConfigs:
+- defaultPool:
+    serviceAccount: cr-cd-sa@onkar-17-cloud.iam.gserviceaccount.com
+  usages:
+  - RENDER 
+  - DEPLOY
